# SqueezeSeg_Ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  model_interface.py  package.xml
launch/: npy_tensorflow_to_ros.launch  squeeze_seg_ros.launch
rviz/: squeezeseg_ros.rviz
script/: squeezeseg_ros_node.py
src/: .kitti_velodyne_to_ros_node.cpp.swp
